--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "baobab-react": "2.1.1",
     "emmett": "^3.1.1",
     "humanize-duration": "^3.9.0",
+    "lodash": "^4.17.4",
     "lodash.debounce": "^4.0.6",
     "react": "^15.0.0",
+    "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.0.0",
     "react-mdl": "^1.5.3",
     "react-router": "^2.0.1",
+    "react-select": "1.0.0-rc.2",
     "react-timeago": "^3.1.1",
+    "react-vis": "^0.11.0",
     "superagent": "^1.8.3",
-    "react-select": "1.0.0-rc.2"
+    "victory": "^0.17.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
@@ -24,7 +28,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.26.2",
     "eslint": "^2.5.3",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -32,6 +36,7 @@
     "http-proxy": "^1.14.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "style-loader": "^0.13.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "yargs": "^4.7.1"
